--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
+@layer base {
+    html {
+      font-family: 'League Spartan', system-ui sans-serif;
+    }
+  }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
