--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,15 @@
     html {
       font-family: 'League Spartan', system-ui sans-serif;
     }
+}
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
   }
+}
 
 @tailwind base;
 @tailwind components;
